<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<androidx.cardview.widget.CardView
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="10dp"
            android:id="@+id/head_root1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginEnd="10dp"
                android:id="@+id/head_1"
                android:layout_marginTop="5dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/cet4"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/head_2"
                android:layout_toEndOf="@id/head_1"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:text="@string/cet4_cn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/activity_main_head_plan_change_plan"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:textSize="15sp"
                android:textColor="#00838F"
                android:text="@string/planHasChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
            <TextView
                android:id="@+id/head_3"
                android:layout_toEndOf="@id/head_1"
                android:layout_below="@+id/head_2"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:textSize="10sp"
                android:textColor="@color/colorText"
                android:text="坚持每日计划，还有300天就完了！"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <ProgressBar
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:max="3139"
                android:clickable="false"
                android:progress="200"
                android:id="@+id/activity_main_head_plan_progressbar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_toEndOf="@id/head_1"
                android:layout_below="@id/head_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />
            <TextView
                android:id="@+id/activity_main_head_plan_has_learned_count"
                android:layout_toEndOf="@id/head_1"
                android:layout_below="@id/activity_main_head_plan_progressbar"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:textSize="15sp"
                android:textColor="@color/colorText"
                android:text="@string/hasLearnedCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/activity_main_head_plan_rate"
                android:layout_below="@id/activity_main_head_plan_progressbar"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:textSize="15sp"
                android:textColor="@color/colorText"
                android:text="200/3139"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </RelativeLayout>
</androidx.cardview.widget.CardView>

</LinearLayout>
